# fivt-993-elements-of-programming

./: BinarySearch.cpp  BinarySearch_UnitTest.cpp  CMakeLists.txt  README  build.sh
korotkiy/rsq/: CMakeLists.txt  rsq.h  rsq_unittest.cc  safe_distance.h  safe_distance_unittest.cc  static_rsq.h
losik/: BinarySearch.cpp  BinarySearch_UnitTest.cpp  adviced_search.h  build.sh  comparator_mutator.h  find_first_not_less.h  gtests.cpp
stlext/: CMakeLists.txt  fenwick_tree.h  integer_part_of_log2.cc  integer_part_of_log2.h  persistent_heap.h  safe_distance.h  static_rmq.h  static_rsq.h  vector.h
test/: CMakeLists.txt  integer_part_of_log2_test.cc  persistent_heap_test.cc  safe_distance_test.cc  static_rmq_test.cc  static_rsq_test.cc  vector_test.cc
